creusot/tests/should_fail/prusti/logic/deref.stderr
error: `&'a mut X` cannot be moved from `'0h` to `'now` since it doesn't live long enough
       `'a` doesn't outlive `'now`
 --> deref.rs:6:6
  |
6 |     *x
  |      ^

error: aborting due to 1 previous error

